manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-delete-tasks-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-delete-tasks-api
  template:
    metadata:
      labels:
        app: todo-delete-tasks-api
    spec:
      containers:
      - name: todo-delete-tasks-api
        image: akscon1.azurecr.io/todo-delete-tasks-api:v1
        ports:
        - containerPort: 8000
